--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+  },
+  "engines": {
+    "node": "^14"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.7",
+    "chrome-aws-lambda": "^6",
+    "express": "^4.18.1",
+    "puppeteer-core": "^6"
+  },
+  "devDependencies": {
     "puppeteer": "^23.10.1"
   }
 }
