--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sparticuz/chromium": "^131.0.1",
     "dotenv": "^16.4.7",
-    "chrome-aws-lambda": "^6",
-    "express": "^4.18.1",
-    "puppeteer-core": "^6"
-  },
-  "devDependencies": {
-    "puppeteer": "^23.10.1"
+    "express": "^4.21.1",
+    "puppeteer": "^23.10.1",
+    "puppeteer-core": "^23.10.1"
   }
 }
